2002-07-23  Chris Blumenberg  <cblu@apple.com>

More plumbing for contextual menu support.

        * kwq/WebCoreBridge.h:
        * kwq/WebCoreBridge.mm:
        (-[WebCoreBridge completeURLForDOMString:]): renamed
        (-[WebCoreBridge elementInfoAtPoint:]): renamed
        * kwq/qt/qpixmap.h: added an accessor to the WebCoreImageRenderer

2002-07-23  Darin Adler  <darin@apple.com>

        * WebCore.pbproj/project.pbxproj: Fix file reference types to be more consistent.

        * khtml/html/htmltokenizer.cpp:
        (HTMLTokenizer::parseTag): Changed indenting to use spaces, makes our diff with
	KDE smaller.
        (HTMLTokenizer::end): Remove unneeded APPLE_CHANGES.

        * kwq/KWQDOMNode.cpp: Tweak.
        * kwq/KWQDOMNode.h: Tweak.

2002-07-23  David Hyatt  <hyatt@apple.com>

	Fix bug 2803155 - images not displayed on http://bscw.gmd.de.
	My fix is to use our newfound quirks mode to implement a comment
	parsing quirk (this is how Mozilla handles this same issue).
	Only in quirks mode, the tokenizer will treat <!--> atomically as
	a complete comment.

	This is bug 34302 on bugs.kde.org, for those who are curious.
	
        * khtml/html/htmltokenizer.cpp:
        (HTMLTokenizer::parseTag):

2002-07-23  Chris Blumenberg  <cblu@apple.com>

	Initial plumbing for contextual menu support.

        * WebCore.pbproj/project.pbxproj:
        * kwq/KWQDOMNode.cpp: Added.
        (isImage):
        * kwq/KWQDOMNode.h: Added.
        * kwq/WebCoreBridge.h:
        * kwq/WebCoreBridge.mm:
        (-[WebCoreBridge _URLForDOMString:]): added
        (-[WebCoreBridge _elementInfoForMouseEvent:]): added

2002-07-23  Richard Williamson (Local)  <rjw@apple.com>

        Turn on find related code in part in preparation for
        implementing find in WebKit.
        
        * khtml/khtml_part.cpp:
        (KHTMLPart::init):
        (KHTMLPart::clear):
        (KHTMLPart::findTextNext):

2002-07-23  David Hyatt  <hyatt@apple.com>
